--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "informed/diff-fdn-colorless"]
-	path = informed/diff-fdn-colorless
+	path = informed/diffFDN
 	url = git@github.com:gdalsanto/diff-fdn-colorless.git
 [submodule "informed/Two_stage_filter"]
 	path = informed/Two_stage_filter
