Add diff-fdn-colorless submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "informed/Two_stage_filter"]
 	path = informed/Two_stage_filter
 	url = git@github.com:gdalsanto/Two_stage_filter.git
+[submodule "diff-fdn-colorless"]
+	path = diff-fdn-colorless
+	url = git@github.com:gdalsanto/diff-fdn-colorless.git
